--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,25 +27,8 @@ jobs:
           # Simple test to check if app imports correctly
           python -c "from app.app import app; print('App imported successfully')"
 
-  build-push:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}:latest,${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-
   deploy:
-    needs: build-push
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -116,7 +99,7 @@ jobs:
           # Deploy
           helm upgrade --install car-lot ./helm/car-lot \
             --set image.repository=${{ env.DOCKER_IMAGE }} \
-            --set image.tag=${{ github.sha }} \
+            --set image.tag=latest \
             --set nfs.server=${{ steps.tf-outputs.outputs.master_ip }}
 
       - name: Final Output
