Suppress Terraform debug output

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,9 +61,9 @@ jobs:
         id: tf-outputs
         working-directory: ./terraform
         run: |
-          echo "alb_dns=$(terraform output -raw alb_dns_name)" >> $GITHUB_OUTPUT
-          echo "master_ip=$(terraform output -raw master_private_ip)" >> $GITHUB_OUTPUT
-          terraform output -raw ssh_private_key > /tmp/generated_key.pem
+          echo "alb_dns=$(terraform output -raw alb_dns_name 2>/dev/null)" >> $GITHUB_OUTPUT
+          echo "master_ip=$(terraform output -raw master_private_ip 2>/dev/null)" >> $GITHUB_OUTPUT
+          terraform output -raw ssh_private_key > /tmp/generated_key.pem 2>/dev/null
           chmod 400 /tmp/generated_key.pem
 
       - name: Setup Ansible
