--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,11 +60,11 @@ jobs:
       - name: Get Terraform Outputs
         id: tf-outputs
         working-directory: ./terraform
-        env:
-          TF_LOG: ""
         run: |
-          echo "alb_dns=$(terraform output -raw alb_dns_name)" >> $GITHUB_OUTPUT
-          echo "master_ip=$(terraform output -raw master_private_ip)" >> $GITHUB_OUTPUT
+          ALB_DNS=$(terraform output -raw alb_dns_name | head -n 1)
+          MASTER_IP=$(terraform output -raw master_private_ip | head -n 1)
+          echo "alb_dns=$ALB_DNS" >> $GITHUB_OUTPUT
+          echo "master_ip=$MASTER_IP" >> $GITHUB_OUTPUT
           terraform output -raw ssh_private_key > /tmp/generated_key.pem
           chmod 400 /tmp/generated_key.pem
 
