--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,8 +63,18 @@ jobs:
         run: |
           ALB_DNS=$(terraform output -raw alb_dns_name | head -n 1)
           MASTER_IP=$(terraform output -raw master_private_ip | head -n 1)
+          
+          # Extract instance IPs one by one
+          IP1=$(terraform output -raw instance_ips | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | sed -n '1p')
+          IP2=$(terraform output -raw instance_ips | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | sed -n '2p')
+          IP3=$(terraform output -raw instance_ips | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | sed -n '3p')
+          
           echo "alb_dns=$ALB_DNS" >> $GITHUB_OUTPUT
           echo "master_ip=$MASTER_IP" >> $GITHUB_OUTPUT
+          echo "ip1=$IP1" >> $GITHUB_OUTPUT
+          echo "ip2=$IP2" >> $GITHUB_OUTPUT
+          echo "ip3=$IP3" >> $GITHUB_OUTPUT
+          
           terraform output -raw ssh_private_key > /tmp/generated_key.pem
           chmod 400 /tmp/generated_key.pem
 
@@ -76,16 +86,8 @@ jobs:
       - name: Generate Inventory
         working-directory: ./ansible
         run: |
-          # Install jq for JSON parsing
-          sudo apt-get install -y jq
-          
-          # Get instance IPs from terraform using jq
-          cd ../terraform
-          INSTANCE_IPS=$(terraform output -json instance_ips 2>/dev/null | jq -r '.value[]' | tr '\n' ' ')
-          cd ../ansible
-          
-          # Pass IPs to Python script
-          python3 generate_inventory.py $INSTANCE_IPS
+          # Use IPs from terraform outputs
+          python3 generate_inventory.py "${{ steps.tf-outputs.outputs.ip1 }}" "${{ steps.tf-outputs.outputs.ip2 }}" "${{ steps.tf-outputs.outputs.ip3 }}"
           
           echo "Generated inventory.ini:"
           cat inventory.ini
