--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,6 +7,23 @@
     nfs_path: "/srv/nfs/carlot"
   
   tasks:
+    - name: Ensure br_netfilter kernel module is loaded
+      shell: |
+        echo br_netfilter | tee /etc/modules-load.d/k8s.conf
+        modprobe br_netfilter || true
+      changed_when: false
+      ignore_errors: yes
+
+    - name: Set required sysctl params for Kubernetes
+      shell: |
+        cat > /etc/sysctl.d/k8s.conf <<'EOF'
+        net.bridge.bridge-nf-call-iptables = 1
+        net.bridge.bridge-nf-call-ip6tables = 1
+        net.ipv4.ip_forward = 1
+        EOF
+        sysctl --system
+      changed_when: false
+      ignore_errors: yes
     - name: Wait for cloud-init to finish
       command: cloud-init status --wait
       changed_when: false
@@ -106,7 +123,7 @@
       when: "'master' in group_names"
       shell: |
         kubeadm reset -f
-        kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=NumCPU
+        kubeadm init --pod-network-cidr=10.244.0.0/16 --ignore-preflight-errors=NumCPU,FileContent--proc-sys-net-bridge-bridge-nf-call-iptables
         mkdir -p /home/ubuntu/.kube
         cp -f /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
         chown ubuntu:ubuntu /home/ubuntu/.kube/config
