--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -152,22 +152,31 @@
       retries: 10
       delay: 10
 
-    - name: Get Join Command
+    - name: Ensure kubeadm token exists and get join command (Master only)
       when: "'master' in group_names"
-      shell: kubeadm token create --print-join-command
+      become: yes
+      shell: |
+        set -e
+        # Try to create token if none exists
+        kubeadm token list || true
+        if ! kubeadm token list | awk 'NR>1{print $1}' | grep -qE '^[a-z0-9]'; then
+          kubeadm token create --ttl 30m >/dev/null
+        fi
+        kubeadm token create --print-join-command
       register: join_command_raw
       retries: 3
       delay: 5
 
-    - name: Set Join Command Fact
+    - name: Share join command to all hosts
       when: "'master' in group_names"
       set_fact:
-        join_command: "{{ join_command_raw.stdout }}"
+        cluster_join_command: "{{ join_command_raw.stdout }}"
+      run_once: true
 
     - name: Join Workers to Cluster
       when: "'worker' in group_names"
       shell: |
         kubeadm reset -f
-        {{ hostvars[groups['master'][0]]['join_command'] }} --ignore-preflight-errors=NumCPU
+        {{ cluster_join_command }} --ignore-preflight-errors=NumCPU
       retries: 2
       delay: 10
