--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: car-lot-simple
+  name: car-lot-app
   labels:
-    app: car-lot-simple
+    app: car-lot-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: car-lot-simple
+      app: car-lot-app
   template:
     metadata:
       labels:
-        app: car-lot-simple
+        app: car-lot-app
     spec:
       containers:
       - name: car-lot
@@ -50,20 +50,3 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: car-lot-service
-  labels:
-    app: car-lot-simple
-spec:
-  type: NodePort
-  ports:
-  - port: 80
-    targetPort: 5000
-    nodePort: 30080
-    protocol: TCP
-    name: http
-  selector:
-    app: car-lot-simple
